# simplicity-contracts

./: Cargo.toml
crates/cli/: Cargo.toml
crates/contracts/: Cargo.toml
crates/simplicityhl-core/: Cargo.toml
crates/simplicityhl-core/src/: scripts.rs
